--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,39 @@
-.component {
-    padding: 15px;
-    background: #f0f0f0;
-    margin-bottom: 5px;
+body {
+    min-height: 100vh;
+    position: relative;
+    padding-bottom: 80px;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.header-logo {
+    width: 300px;
+}
+
+.footer-logo {
+    width: 200px;
+}
+
+.poster-wrapper {
+    padding-bottom: 148%;
+    background: #999;
+    position: relative;
+    overflow: hidden;
+}
+
+.poster-wrapper img {
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.movie-preview .card-body {
+    padding: 0.5rem 0.7rem;
 }
